responsive mobile design

--- a/client/styles/app.sass
+++ b/client/styles/app.sass
@@ -3,7 +3,6 @@
 @import "variables"
 @import "typography"
 @import "projects"
-
 // body
 //   background-color: $black
 
@@ -57,3 +56,5 @@ body
 
 span.highlight
   color: $purple !important
+
+@import "mobile"
